syntax = "proto3";

package events_svc;

option go_package = "auth-service/internal/adapter/grpc/server/frontend/proto/events";

import "google/protobuf/timestamp.proto";

message User {
  int64 id = 1;
  string username = 2;
  string email = 3;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
  bool is_deleted = 7;
}

message UserCreated {
  User user = 1;
}

message UserUpdated {
  User user = 1;
}

message UserDeleted {
  int64 id = 1;
}

message GameResult {
  string room_id = 1;
  int64 winner_id = 2;
  int64 loser_id = 3;
  int64 bet = 4;
  google.protobuf.Timestamp created_at = 5;
  PlayerGameResult player1 = 6;
  PlayerGameResult player2 = 7;
}

message PlayerGameResult {
  int64 player_id = 1;
  int32 final_score = 2;
  repeated string final_hand = 3;
}
